backend of courtline

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/courtline
+MONGO_URI=mongodb+srv://paras027:Paras@cluster0.s2rwujw.mongodb.net/Courtline?retryWrites=true&w=majority
 JWT_SECRET=supersecretjwtkey
 
