--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 PORT=5000
 MONGO_URI=mongodb+srv://paras027:Paras@cluster0.s2rwujw.mongodb.net/Courtline?retryWrites=true&w=majority
 JWT_SECRET=supersecretjwtkey
+RAZORPAY_KEY_ID=rzp_test_RTeubkNe4QzpAA
+RAZORPAY_SECRET=mzlFxy0vDejk4Vch2f2vpjvw
 
+CLOUDINARY_NAME=dvurpflmb
+CLOUDINARY_KEY=546777327361565
+CLOUDINARY_SECRET=MxKWN0tzjtYMELgTWCMRQ9D8Fng
