--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "cron": "^4.3.3",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "googleapis": "^166.0.0",
